--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body, h1, h2, p, footer {
 
 /* Set the body background color and font style */
 body {
-    background-color: #e9dfbd; /* Light gray background */
+    background-color: #121112; /* Light gray background */
     font-family: Arial, sans-serif; /* Font style for the text */
     margin: 0; /* Remove default margin */
     padding: 0; /* Remove default padding */
@@ -114,7 +114,7 @@ main img {
 }
 .aboutme-text p {
   margin-bottom: 0;
-  color: #2a4f3d;
+  color: #e9efec;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -133,8 +133,8 @@ main img {
 
 /* Skills section styles */
 .skills-section {
-  background: #2a4f3d;
-  color: #ead48c;
+  background: #121112;
+  color: #ffffff;
   padding: 30px 20px;
   border-radius: 10px;
   margin-bottom: 40px;
@@ -149,7 +149,7 @@ main img {
 }
 .skill-badge {
   display: inline-block;
-  background: #658f7a;
+  background: #121112;
   color: #fff;
   padding: 8px 16px;
   border-radius: 20px;
