--- a/style.css
+++ b/style.css
@@ -157,6 +157,12 @@ main img {
   font-size: 1em;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';
 }
+.gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
 
 /* Style for the footer section */
 footer {
