--- a/style.css
+++ b/style.css
@@ -49,11 +49,11 @@ header {
 header h1 {
   margin-top: -100px; /* Increase this number to move it further down */
   font-size: 2.5em;
-  color: #ead48c;
+  color: #ffffff;
   position: relative;
   z-index: 1;
   text-shadow: -1px -1px 0 #658f7a, 1px -1px 0 #658f7a, 1px 1px 0 #658f7a,
-    1px 1px 0 #658f7a;
+    1px 1px 0 #ffffff;
   
 }
 
@@ -64,7 +64,7 @@ header h1 {
 }
 
 .social-icons a:hover {
-  color: #2a4f3d;   /* hover color */
+  color: #ffffff;   /* hover color */
 }
 
 .subtitle {
@@ -77,7 +77,13 @@ header h1 {
   
 }
 
+#grad1 {
+  height: 200px;
+  background-color: red; /* For browsers that do not support gradients */
+  background-image: linear-gradient(to bottom, red, yellow);
 /* Style for the main content area */
+} 
+
 main {
   max-width: 900px;
   margin: 0 auto;
