--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ header h1 {
 
 #grad1 {
   height: 200px;
-  background-color: white; /* For browsers that do not support gradients */
+  background-color: rgb(0, 0, 0); /* For browsers that do not support gradients */
   background-image: linear-gradient(to bottom, white, background-color);
 /* Style for the main content area */
 } 
