--- a/style.css
+++ b/style.css
@@ -9,11 +9,15 @@ body, h1, h2, p, footer {
 
 /* Set the body background color and font style */
 body {
-    font-family: Arial, sans-serif; /* Font style for the text */
-    margin: 0; /* Remove default margin */
-    padding: 0; /* Remove default padding */
-    
+  margin: 0;
+  min-height: 300vh;
+  background: linear-gradient(
+    to bottom,
+    rgba(245, 247, 250, 1),
+    rgba(17, 24, 39, var(--darkness))
+  );
 }
+
 
 /* Style for the header section */
 header {
