--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 
 /* Set the body background color and font style */
-html, body {
+html, .overview {
   margin: 0;
   min-height: 300vh;
 
@@ -13,9 +13,9 @@ html, body {
     to bottom,
     rgb(245, 247, 250),
     rgb(
-      calc(20 + (60 * (1 - var(--darkness)))),
-      calc(30 + (60 * (1 - var(--darkness)))),
-      calc(40 + (60 * (1 - var(--darkness))))
+      calc(20 + (80 * (1 - var(--darkness)))),
+      calc(30 + (80 * (1 - var(--darkness)))),
+      calc(40 + (80 * (1 - var(--darkness))))
     )
   );
 
@@ -38,11 +38,15 @@ body, h1, h2, p, footer {
 html {
   background-attachment: fixed;
 }
-
+.project {
+  background-color: black;
+  margin-bottom: 200px;
+}
 
 .project-card {
-  background: rgba(255, 255, 255, 0.9);
-  color: #111;
+  max-width: 400px;
+  background: rgba(59, 58, 61, 0.9);
+  color: #fffdfd;
   border-radius: 16px;
   padding: 1.5rem;
 }
@@ -51,6 +55,13 @@ html {
 .project-card.show {
   opacity: 1;
   transform: translateY(0);
+}
+
+.project-card img {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  margin-bottom: 15px;
 }
 
 
@@ -64,7 +75,7 @@ header {
 /* Banner image stretches across the top */
 .banner {
   width: 100%;
-  height: 200px;
+  height: 100px;
   object-fit: cover;
   display: block;
 }
@@ -180,8 +191,8 @@ main img {
 
 /* Style for the footer section */
 footer {
-  background: #658f7a;
-  color: #fff;
+  background: #3c3c43;
+  color: #e2dede;
   text-align: center;
   padding: 12px 0;
   font-size: 0.95em;
